# verrific

./: .config.json  LICENSE  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: integration-tests.yml
scripts/: demo.ipynb  run_integration_tests_local.sh
src/verrific/: __about__.py  __init__.py  core.py  pdf2grobid.py  schemas.py
tei/: 2012-an-open-large-scale-collaborative-effort-to-estimate-the-reproducibility-of-psychological-science.grobid.tei.xml
tests/: __init__.py
tests/integration/: conftest.py  test_pdf2grobid.py
tests/unit/: test_pdf2grobid.py
