[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verrific"
dynamic = ["version"]
description = 'Python package for cross-checking and verifying references in scientific papers, designed for use with scienceverse/papercheck'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Jakub Werner", email = "jakubwerner1@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Jakub Werner/verrific#readme"
Issues = "https://github.com/Jakub Werner/verrific/issues"
Source = "https://github.com/Jakub Werner/verrific"

[tool.hatch.version]
path = "src/verrific/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/verrific tests}"

[tool.coverage.run]
source_pkgs = ["verrific", "tests"]
branch = true
parallel = true
omit = [
  "src/verrific/__about__.py",
]

[tool.coverage.paths]
verrific = ["src/verrific", "*/verrific/src/verrific"]
tests = ["tests", "*/verrific/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
